@@ -26,6 +26,7 @@ t/bigratpm.inc			# actual BigRat tests
 t/bigratpm.t			# native BigRat testsuite
 t/bigratup.t			# test under $Math::BigInt::upgrade
 t/bigroot.t
+t/hang.t
 t/Math/BigRat/Test.pm		# test class for BigFloat compatible output
 t/pod.t				# test that the POD is wellformed
 t/pod_cov.t			# test that the POD covers all public functions
