@@ -1,7 +1,7 @@
 
 * rounding needs a new definiton: rounding to nearest fraction (see Knuth
   and fixed-slash fractions)
-* bmod(), bmodpow(), bmodinv(), broot() not fully/properly implemented yet
+* bmod(), bmodpow(), bmodinv() not fully/properly implemented yet
 * bsqrt() is also not quite optimal yet
 * BigRat does not handle modify() yet or in a very incomplete manner
 
